# serve

./: Cargo.toml  Makefile.toml  README.md  tailwind.config.js  watch-styles
src/: auth.rs  index.rs  main.rs
templates/: index.html.tera  style.css
