[package]
name = "serve"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.14"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
structopt = "0.3.22"
timeago = "0.3.0"
tokio = { version = "1.9.0", features = ["full"] }
