[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.17"
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
timeago = "0.4.1"
tokio = { version = "1.28.0", features = ["full"] }
